# gitscribe

./: IDEAS.md  README.md  go.mod  go.sum  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.gitscribe/: config.json
cmd/gitscribe/: main.go
e2e/: gitscribe.test.js  package.json
gitscribe/: actions.py  ai_backend.py  cli.py  commit_command.py  config_manager.py  git_operations.py  models.py  pr_command.py  prompt_builder.py  theme.py  ui.py
ideas/: idea-01-stream-ai-responses.md  idea-02-diff-size-limiting.md  idea-03-amend-command.md  idea-05-hooks-install.md  idea-07-custom-prompt-templates.md  idea-08-config-show.md  idea-09-filter-lockfiles.md  idea-10-token-count-warning.md  idea-13-dry-run-flag.md  idea-14-system-prompt.md  idea-15-retry-backoff.md  idea-16-config-validate.md  idea-17-init-wizard.md  idea-19-env-overrides.md  idea-21-pr-format-options.md  idea-22-per-file-diff-stats.md  idea-24-actionable-errors.md  idea-25-config-set.md  idea-26-project-level-config.md  idea-27-temperature-max-tokens.md  idea-28-title-length-validation.md  idea-29-structured-output.md  idea-30-context-flag.md
internal/app/: app_test.go  service.go
internal/cli/: commit.go  config.go  pr.go  root.go  root_test.go
internal/config/: config.go  config_test.go  exec.go  loader.go  loader_test.go  model.go  model_test.go
tests/: test_actions.py  test_ai_backend.py  test_cli.py  test_commit_command.py  test_config_manager.py  test_git_operations.py  test_models.py  test_pr_command.py  test_prompt_builder.py  test_theme.py  test_ui.py
(+24 files in other folders)
