[project]
name = "gitscribe"
version = "0.1.0"
description = "AI-powered git commit and PR message generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "aiohttp>=3.11.0",
    "pyperclip>=1.9.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
gitscribe = "gitscribe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "anyio[trio]>=4.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"
